# features-extraction-service

./: README.md  pyproject.toml  requirements.txt  setup.cfg
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: main.yml
feature_extractor/extractor/: __init__.py  features_extractor.py  features_set.py
feature_extractor/tests/unit_tests/: test_feature_extractor.py
src/: server.py
src/database/: __init__.py  features_repository.py
src/extractor/: features_extractor.py
src/service/: README.md  __init__.py  features_extractor_service.proto  features_extractor_service_pb2.py  features_extractor_service_pb2.pyi  features_extractor_service_pb2_grpc.py  service.py
src/storage/: __init__.py  datasets_storage.py
tests/unit_tests/database/: test_features_repository.py
tests/unit_tests/extractor/: test_feature_extractor.py
tests/unit_tests/extractor/extract_functions/: test_get_missing_entries_ratio.py  test_is_dichotomous.py  test_is_quantitative.py
tests/unit_tests/service/: test_service.py
tests/unit_tests/utils/: __init__.py  get_random_string.py
