[tool.poetry]
name = "features-extraction-service"
version = "0.1.0"
description = "Service managing datasets features"
authors = ["Guilherme <g.lisboa.oliveira@outlook.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.23.3"
pandas = "^1.5.0"
tables = "^3.7.0"
grpcio-tools = "^1.49.1"
redis = "^4.3.5"
python-dotenv = "^0.21.0"
mypy-protobuf = "^3.3.0"
ostatslib = "^0.1.0"

[tool.poetry.group.dev.dependencies]
pylint = "^2.15.3"

[tool.poetry.group.tests.dependencies]
pytest = "^7.1.3"
pytest-cov = "^3.0.0"
pytest-mock = "^3.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.run]
relative_files = true
branch = true
omit = ["src/service/features_extractor_service_pb2_grpc.py", "src/service/features_extractor_service_pb2.py"]

[tool.coverage.report]
show_missing = true
skip_covered = true
